--- a/index.html
+++ b/index.html
@@ -411,5 +411,16 @@
       msg.textContent = (c === 4 && h === 10) ? '✅ Looks like butane!' : '❌ Not quite yet.';
     }
   </script>
+<!-- ✅ SELF-CHECK CHECKLIST -->
+<section id="selfcheck" class="section">
+  <h2>✅ I Can...</h2>
+  <label><input type="checkbox"> Define alkanes as saturated hydrocarbons.</label><br>
+  <label><input type="checkbox"> Apply the general formula for alkanes.</label><br>
+  <label><input type="checkbox"> Name the first ten alkanes correctly.</label><br>
+  <label><input type="checkbox"> Draw molecular and structural formulas.</label><br>
+  <label><input type="checkbox"> Describe physical & chemical properties.</label><br>
+  <label><input type="checkbox"> Give real-life uses of alkanes.</label><br>
+  <label><input type="checkbox"> Test your knowledge with a quiz.</label>
+</section>
 </body>
 </html>
