--- a/index.html
+++ b/index.html
@@ -167,6 +167,19 @@
     <div id="quizContainer"></div>
   </section>
 
+  <!-- ✅ TRUE / FALSE QUESTIONS -->
+<section id="truefalse" class="section">
+  <h2>🔍 True or False</h2>
+  <p>Test your quick understanding!</p>
+  <ul>
+    <li><label><input type="checkbox"> Alkanes are unsaturated hydrocarbons. ❌</label></li>
+    <li><label><input type="checkbox"> Methane is the simplest alkane. ✅</label></li>
+    <li><label><input type="checkbox"> Alkanes contain only single bonds. ✅</label></li>
+    <li><label><input type="checkbox"> Alkanes dissolve well in water. ❌</label></li>
+  </ul>
+</section>
+
+  
   <script>
     /* Smooth scrolling */
     document.querySelectorAll('nav a').forEach(link => {
