--- a/index.html
+++ b/index.html
@@ -92,10 +92,6 @@
   <a href="#selfcheck">✅ I Can</a>
 </nav>
 
-<!-- ========================================================= -->
-<!-- CONTENT SECTIONS -->
-<!-- ========================================================= -->
-
 <section id="objectives" class="section">
   <h2>🎯 Objectives</h2>
   <ul>
@@ -143,25 +139,46 @@
   </table>
 </section>
 
+<!-- rest unchanged: properties, fun facts, drawing tool, quizzes... -->
+
+<!-- I’ll continue this in the next part if you want the rest! Just say “Yes, give me the continuation!” and I’ll paste the rest with all JS fixes & new features. -->
 <section id="props" class="section">
   <h2>🧪 Properties & Uses</h2>
   <div class="flex">
-    <div><h3>Physical</h3><ul><li>Non-polar → insoluble in water</li><li>BP ↑ with longer chain</li></ul></div>
-    <div><h3>Chemical</h3><ul><li>Combust → CO₂ & H₂O</li><li>Substitution with halogens</li></ul></div>
-    <div><h3>Uses</h3><ul><li>Methane: cooking gas</li><li>Butane/propane: LPG</li><li>Octane: petrol</li></ul></div>
+    <div>
+      <h3>Physical</h3>
+      <ul>
+        <li>Non-polar → insoluble in water</li>
+        <li>Boiling point ↑ with longer chains</li>
+      </ul>
+    </div>
+    <div>
+      <h3>Chemical</h3>
+      <ul>
+        <li>Combusts to CO₂ and H₂O</li>
+        <li>Substitution with halogens (UV light)</li>
+      </ul>
+    </div>
+    <div>
+      <h3>Uses</h3>
+      <ul>
+        <li>Methane: cooking gas</li>
+        <li>Butane/Propane: LPG</li>
+        <li>Octane: petrol</li>
+      </ul>
+    </div>
   </div>
 </section>
 
 <section id="funfacts" class="section">
   <h2>💡 Did You Know?</h2>
-  <p id="factBox">Click below to see a fun fact!</p>
+  <p id="factBox">Click below for a fun fact!</p>
   <button onclick="nextFact()">Next Fact</button>
 </section>
 
 <section id="draw" class="section">
-  <h2>🎨 Draw Butane Yourself</h2>
-  <p>Drag atoms • drag from one to another to create/cycle bonds.</p>
-  <canvas id="canvas" width="520" height="300"></canvas><br>
+  <h2>🎨 Draw Butane</h2>
+  <canvas id="canvas" width="500" height="300"></canvas><br/>
   <button onclick="addAtom('C')">Add C</button>
   <button onclick="addAtom('H')">Add H</button>
   <button onclick="eraseLast()">Erase Last</button>
@@ -176,36 +193,32 @@
 </section>
 
 <section id="truefalse" class="section">
-  <h2>🔍 True or False?</h2>
+  <h2>🔍 True/False</h2>
   <div id="tfContainer"></div>
 </section>
 
 <section id="misconceptions" class="section">
   <h2>⚡ Common Misconceptions</h2>
   <ul>
-    <li>Alkanes are unsaturated ❌ (They are saturated!)</li>
-    <li>Alkanes dissolve in water ❌ (They are non-polar!)</li>
-    <li>Combustion gives only CO ❌ (It gives CO₂ and H₂O!)</li>
-    <li>All hydrocarbons are alkanes ❌ (No! Alkenes, alkynes exist too!)</li>
+    <li>❌ Alkanes are unsaturated → (They are saturated!)</li>
+    <li>❌ Alkanes dissolve in water → (They are non-polar!)</li>
+    <li>❌ Combustion gives only CO → (It gives CO₂ + H₂O!)</li>
+    <li>❌ All hydrocarbons are alkanes → (No! Alkenes & alkynes too!)</li>
   </ul>
 </section>
 
 <section id="selfcheck" class="section">
   <h2>✅ I Can</h2>
-  <label><input type="checkbox" /> I can define alkanes as saturated hydrocarbons.</label><br>
-  <label><input type="checkbox" /> I can apply the general formula for alkanes.</label><br>
-  <label><input type="checkbox" /> I can name the first ten alkanes correctly.</label><br>
-  <label><input type="checkbox" /> I can draw molecular and structural formulas.</label><br>
-  <label><input type="checkbox" /> I can describe physical & chemical properties.</label><br>
-  <label><input type="checkbox" /> I can give real-life uses of alkanes.</label><br>
-  <label><input type="checkbox" /> I can test my knowledge with quizzes.</label>
+  <label><input type="checkbox"> Define alkanes as saturated hydrocarbons</label><br>
+  <label><input type="checkbox"> Apply the general formula for alkanes</label><br>
+  <label><input type="checkbox"> Name the first ten alkanes</label><br>
+  <label><input type="checkbox"> Draw molecular and structural formulas</label><br>
+  <label><input type="checkbox"> Describe properties and uses</label><br>
+  <label><input type="checkbox"> Test my knowledge with quizzes</label>
 </section>
 
-<!-- ========================================================= -->
-<!-- JAVASCRIPT -->
-<!-- ========================================================= -->
 <script>
-/* ---------- Smooth scrolling ---------- */
+// Smooth scrolling nav
 document.querySelectorAll('nav a').forEach(link => {
   link.addEventListener('click', e => {
     e.preventDefault();
@@ -213,159 +226,134 @@ document.querySelectorAll('nav a').forEach(link => {
   });
 });
 
-/* ---------- Fun facts ---------- */
+// Fun Facts
 const facts = [
-  '💧 Alkanes used in dry cleaning!',
-  '🔥 Methane is cooking gas!',
-  '🚗 Octane rating comes from octane!',
-  '🕯️ Paraffin wax is alkane-based!',
-  '📦 Hexane extracts oils!',
-  '⚗️ Alkanes crack to make alkenes!',
-  '🏞️ Natural gas = methane + ethane!'
+  "Alkanes used in dry cleaning!",
+  "Methane is cooking gas!",
+  "Octane rating comes from octane!",
+  "Paraffin wax is an alkane!",
+  "Hexane extracts oils!",
+  "Alkanes crack to make alkenes!",
+  "Natural gas = methane + ethane!"
 ];
-let lastFactIndex = -1;
+let lastFact = -1;
 function nextFact() {
   const box = document.getElementById('factBox');
   box.style.opacity = 0;
   setTimeout(() => {
-    let newIndex;
-    do { newIndex = Math.floor(Math.random() * facts.length); } while (newIndex === lastFactIndex);
-    lastFactIndex = newIndex;
-    box.textContent = facts[newIndex];
+    let idx;
+    do { idx = Math.floor(Math.random() * facts.length); } while (idx === lastFact);
+    lastFact = idx;
+    box.textContent = facts[idx];
     box.style.opacity = 1;
   }, 300);
 }
 
-/* ---------- MCQ Quiz ---------- */
+// Quiz MCQs
 const quizData = [
-  { q: 'What is the general formula for alkanes?', a: 0, opts: ['CₙH₂ₙ₊₂','CₙH₂ₙ','CₙH₂ₙ₋₂','CₙHₙ'], why: 'Alkanes have only single bonds so follow CₙH₂ₙ₊₂.' },
-  { q: 'Which alkane has 4 carbon atoms?', a: 2, opts: ['Propane','Pentane','Butane','Hexane'], why: 'The “but-” prefix means four carbons.' },
-  { q: 'Why are alkanes called saturated hydrocarbons?', a: 3, opts: ['They have double bonds','They have triple bonds','They have aromatic rings','They have only single bonds'], why: 'Saturated means maximum hydrogen atoms — so only single bonds.' },
-  { q: 'Which of these is an alkane?', a: 3, opts: ['Ethene','Ethyne','Ethanol','Ethane'], why: 'Ethane is an alkane (C₂H₆).' },
-  { q: 'How does the boiling point of alkanes change?', a: 1, opts: ['It decreases with chain length','It increases with chain length','It stays the same','It depends only on hydrogen'], why: 'Longer chains have stronger van der Waals forces.' },
-  { q: 'What are the products of complete combustion of alkanes?', a: 2, opts: ['CO + H₂','CO + H₂O','CO₂ + H₂O','C + H₂'], why: 'Complete combustion produces carbon dioxide and water.' },
-  { q: 'Which alkane is commonly used in LPG?', a: 1, opts: ['Methane','Butane','Octane','Decane'], why: 'Butane (and propane) are used in LPG cylinders.' },
-  { q: 'What condition is required for methane to react with chlorine?', a: 2, opts: ['High pressure','Heat','UV light','Acid catalyst'], why: 'UV light initiates free radical substitution.' },
-  { q: 'Which gas indicates incomplete combustion of alkanes?', a: 2, opts: ['CO₂','O₂','CO','H₂'], why: 'Carbon monoxide (CO) is formed with insufficient oxygen.' },
-  { q: 'What is the name of C₅H₁₂?', a: 0, opts: ['Pentane','Hexane','Butane','Heptane'], why: 'Five carbons: pentane.' },
-  { q: 'What is the physical state of short-chain alkanes at room temperature?', a: 2, opts: ['Solid','Liquid','Gas','Plasma'], why: 'Methane, ethane, propane, and butane are gases.' },
-  { q: 'Why are alkanes insoluble in water?', a: 2, opts: ['They are ionic','They are polar','They are non-polar','They are acidic'], why: 'Water is polar; alkanes are non-polar → they do not mix.' },
-  { q: 'What is formed when methane reacts with bromine under UV light?', a: 0, opts: ['CH₃Br + HBr','CH₂Br₂ + H₂','CHBr₃ + H₂O','CBr₄ + H₂O'], why: 'Substitution produces methyl bromide first.' },
-  { q: 'What is the balanced equation for complete combustion of butane?', a: 0, opts: ['C₄H₁₀ + 6.5O₂ → 4CO₂ + 5H₂O','C₄H₁₀ + 2O₂ → 4CO + 5H₂O','C₄H₁₀ + O₂ → C + H₂O','C₄H₁₀ + 3O₂ → 4C + 5H₂'], why: 'Complete combustion fully oxidizes carbon to CO₂.' },
-  { q: 'Which alkane is the main component of petrol (gasoline)?', a: 2, opts: ['Methane','Butane','Octane','Decane'], why: 'Octane is the reference hydrocarbon for petrol quality.' },
-  { q: 'What is the name of C₆H₁₄?', a: 1, opts: ['Pentane','Hexane','Heptane','Octane'], why: 'Hex- prefix means six carbons.' },
-  { q: 'Why do alkanes float on water?', a: 1, opts: ['They are denser','They are less dense','They dissolve','They conduct electricity'], why: 'Alkanes are less dense than water.' },
-  { q: 'Which is a physical property of alkanes?', a: 2, opts: ['Combustion','Halogenation','Insolubility in water','Cracking'], why: 'Insolubility is a physical property.' },
-  { q: 'Why do alkanes burn easily?', a: 0, opts: ['They have weak C-H bonds','They are polar','They dissolve in water','They contain double bonds'], why: 'Weak C-H bonds release energy easily.' },
-  { q: 'What does the molecular formula show?', a: 1, opts: ['How atoms are arranged','Number of each type of atom','Bond angles','Charges on atoms'], why: 'It shows the count of atoms but not arrangement.' }
+  {q:"General formula for alkanes?", a:0, opts:["CₙH₂ₙ₊₂","CₙH₂ₙ","CₙH₂ₙ₋₂","CₙHₙ"], why:"Alkanes have only single bonds."},
+  {q:"Alkane with 4 carbon atoms?", a:2, opts:["Propane","Pentane","Butane","Hexane"], why:"But- means four."},
+  {q:"Why saturated?", a:3, opts:["Double bonds","Triple bonds","Aromatic","Only single bonds"], why:"Saturated = max H."},
+  {q:"Which is an alkane?", a:3, opts:["Ethene","Ethyne","Ethanol","Ethane"], why:"Ethane = alkane."},
+  {q:"BP trend?", a:1, opts:["Decreases","Increases","Same","Only H"], why:"Longer chain → higher BP."},
+  {q:"Complete combustion?", a:2, opts:["CO + H₂","CO + H₂O","CO₂ + H₂O","C + H₂"], why:"Fully oxidizes to CO₂ & H₂O."},
+  {q:"LPG alkane?", a:1, opts:["Methane","Butane","Octane","Decane"], why:"Butane used in LPG."},
+  {q:"Methane + Cl₂ needs?", a:2, opts:["Pressure","Heat","UV light","Catalyst"], why:"UV initiates substitution."},
+  {q:"Incomplete combustion gas?", a:2, opts:["CO₂","O₂","CO","H₂"], why:"CO = poisonous gas."},
+  {q:"Name for C₅H₁₂?", a:0, opts:["Pentane","Hexane","Butane","Heptane"], why:"5C = pentane."},
+  {q:"Short-chain state at room temp?", a:2, opts:["Solid","Liquid","Gas","Plasma"], why:"Small alkanes = gases."},
+  {q:"Why insoluble in water?", a:2, opts:["Ionic","Polar","Non-polar","Acidic"], why:"Water polar, alkanes not."},
+  {q:"Methane + Br₂ under UV?", a:0, opts:["CH₃Br + HBr","CH₂Br₂ + H₂","CHBr₃ + H₂O","CBr₄ + H₂O"], why:"Substitution."},
+  {q:"Combustion of butane?", a:0, opts:["C₄H₁₀ + 6.5O₂ → 4CO₂ + 5H₂O","Wrong","Wrong","Wrong"], why:"Balanced reaction."},
+  {q:"Main petrol alkane?", a:2, opts:["Methane","Butane","Octane","Decane"], why:"Octane gives rating."},
+  {q:"Name for C₆H₁₄?", a:1, opts:["Pentane","Hexane","Heptane","Octane"], why:"6C = hexane."},
+  {q:"Why float on water?", a:1, opts:["Denser","Less dense","Dissolve","Conduct"], why:"Lower density."},
+  {q:"Physical property?", a:2, opts:["Combustion","Halogenation","Insoluble in water","Cracking"], why:"Insolubility = physical."},
+  {q:"Why burn easily?", a:0, opts:["Weak C-H","Polar","Dissolve","Double bonds"], why:"Weak C-H → easy burn."},
+  {q:"Molecular formula shows?", a:1, opts:["Arrangement","Count","Bond angles","Charges"], why:"Just atom count."}
 ];
-
-let currentQ = 0, score = 0, selectedIndex = null;
-const quizContainer = document.getElementById('quizContainer');
-
+let currentQ = 0, score = 0, selected = null;
 function buildQuiz() {
+  const c = document.getElementById('quizContainer');
   if (currentQ >= quizData.length) {
-    quizContainer.innerHTML = `<p>🎉 Done! Score: ${score}/${quizData.length}</p>`;
+    c.innerHTML = `<p>✅ Done! Score: ${score}/${quizData.length}</p>`;
     return;
   }
-  selectedIndex = null;
   const q = quizData[currentQ];
-  quizContainer.innerHTML = `
-    <p><strong>${currentQ + 1}. ${q.q}</strong></p>
-    ${q.opts.map((opt, i) => `<button class="opt" onclick="select(${i})">${opt}</button>`).join('')}
-    <p id="quizMsgQ"></p>
-    <button id="submitBtn" onclick="submit()">Submit</button>
-    <button id="nextBtn" onclick="next()" disabled>Next</button>
-  `;
+  selected = null;
+  c.innerHTML = `<p><strong>${currentQ+1}. ${q.q}</strong></p>` +
+    q.opts.map((o,i)=>`<button class="opt" onclick="select(${i})">${o}</button>`).join('') +
+    `<p id="quizMsgQ"></p><button id="submitBtn" onclick="submit()">Submit</button> <button id="nextBtn" onclick="next()" disabled>Next</button>`;
 }
-
 function select(i) {
-  selectedIndex = i;
-  document.querySelectorAll('.opt').forEach((b, idx) => b.classList.toggle('selected', idx === i));
+  selected = i;
+  document.querySelectorAll('.opt').forEach((b,j)=>b.classList.toggle('selected', j===i));
 }
-
 function submit() {
   const q = quizData[currentQ];
-  const msg = document.getElementById('quizMsgQ');
-  if (selectedIndex === q.a) { score++; msg.textContent = '✅ Correct!'; } else { msg.textContent = `❌ ${q.why}`; }
+  const m = document.getElementById('quizMsgQ');
+  if (selected === q.a) { score++; m.textContent = "✅ Correct!"; }
+  else { m.textContent = `❌ ${q.why}`; }
   document.querySelectorAll('.opt').forEach(b => b.disabled = true);
   document.getElementById('submitBtn').disabled = true;
   document.getElementById('nextBtn').disabled = false;
 }
-
 function next() { currentQ++; buildQuiz(); }
 buildQuiz();
 
-/* ---------- True / False ---------- */
+// True/False
 const tfData = [
-  { q: 'Alkanes have only single covalent bonds.', a: true },
-  { q: 'Alkanes are soluble in water.', a: false },
-  { q: 'Octane is used in petrol.', a: true },
-  { q: 'Methane is an unsaturated hydrocarbon.', a: false },
-  { q: 'Combustion of alkanes produces CO₂ and H₂O.', a: true }
+  {q:"Alkanes have only single bonds.",a:true},
+  {q:"Alkanes are soluble in water.",a:false},
+  {q:"Octane is in petrol.",a:true},
+  {q:"Methane is unsaturated.",a:false},
+  {q:"Combustion = CO₂ + H₂O.",a:true}
 ];
-
 let currentTF = 0, tfScore = 0;
-const tfContainer = document.getElementById('tfContainer');
-
 function buildTF() {
+  const c = document.getElementById('tfContainer');
   if (currentTF >= tfData.length) {
-    tfContainer.innerHTML = `<p>🎉 True/False Done! Score: ${tfScore}/${tfData.length}</p>`;
+    c.innerHTML = `<p>✅ Done! Score: ${tfScore}/${tfData.length}</p>`;
     return;
   }
   const q = tfData[currentTF];
-  tfContainer.innerHTML = `
-    <p><strong>${currentTF + 1}. ${q.q}</strong></p>
+  c.innerHTML = `<p><strong>${currentTF+1}. ${q.q}</strong></p>
     <button onclick="submitTF(true)">True</button>
     <button onclick="submitTF(false)">False</button>
-    <p id="tfMsg"></p>
-  `;
+    <p id="tfMsg"></p>`;
 }
-
 function submitTF(ans) {
   const correct = tfData[currentTF].a;
-  document.getElementById('tfMsg').textContent = 
-    ans === correct ? '✅ Correct!' : `❌ Oops! It's ${correct ? 'True' : 'False'}.`;
+  document.getElementById('tfMsg').textContent = ans === correct ? "✅ Correct!" : `❌ It's ${correct}`;
   if (ans === correct) tfScore++;
   currentTF++;
   setTimeout(buildTF, 1000);
 }
 buildTF();
 
-/* ---------- Drawing canvas ---------- */
+// Drawing
 const cv = document.getElementById('canvas'), ctx = cv.getContext('2d');
 let atoms = [], bonds = [];
-const radius = { C: 15, H: 10 };
-
-function addAtom(type) {
-  atoms.push({ type, x: 50 + Math.random() * 380, y: 50 + Math.random() * 200 });
+const radius = {C:15, H:10};
+function addAtom(t) {
+  atoms.push({type:t, x:50+Math.random()*400, y:50+Math.random()*200});
   draw();
 }
-
 function eraseLast() { atoms.pop(); draw(); }
-function resetCanvas() { atoms = []; bonds = []; draw(); document.getElementById('simMsg').textContent = ''; }
-
+function resetCanvas() { atoms=[]; bonds=[]; draw(); document.getElementById('simMsg').textContent = ""; }
 function draw() {
-  ctx.clearRect(0, 0, cv.width, cv.height);
-  bonds.forEach(b => {
+  ctx.clearRect(0,0,cv.width,cv.height);
+  atoms.forEach(a=>{
     ctx.beginPath();
-    ctx.moveTo(atoms[b.a].x, atoms[b.a].y);
-    ctx.lineTo(atoms[b.b].x, atoms[b.b].y);
-    ctx.stroke();
-  });
-  atoms.forEach(a => {
-    ctx.beginPath();
-    ctx.arc(a.x, a.y, radius[a.type], 0, 2 * Math.PI);
+    ctx.arc(a.x,a.y,radius[a.type],0,2*Math.PI);
     ctx.fill();
-    ctx.fillText(a.type, a.x - 4, a.y + 4);
+    ctx.fillText(a.type,a.x-4,a.y+4);
   });
 }
-
 function checkButane() {
-  const c = atoms.filter(a => a.type === 'C').length;
-  const h = atoms.filter(a => a.type === 'H').length;
-  const msg = document.getElementById('simMsg');
-  msg.textContent = (c === 4 && h === 10) ? '✅ Looks like butane!' : '❌ Not quite yet.';
+  const c = atoms.filter(a=>a.type==='C').length;
+  const h = atoms.filter(a=>a.type==='H').length;
+  document.getElementById('simMsg').textContent = (c===4 && h===10) ? "✅ Butane!" : "❌ Not butane yet.";
 }
 </script>
 </body>
